--- a/main/resources/application.properties
+++ b/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Database configuration
-spring.datasource.url=jdbc:h2:file:./data/vodovod
+spring.datasource.url=jdbc:h2:file:/Users/radebebek/Documents/GIT/vodovod/data/vodovod;AUTO_SERVER=TRUE
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
@@ -26,4 +26,4 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 # Logging
-logging.level.com.vodovod=DEBUG
+logging.level.com.vodovod=TRACE
